# dev_pm_agent

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Cargo.toml  PLAN.md  README.md  render.yaml
.cursor/rules/: post-change-verification.mdc
.github/workflows/: gitleaks.yml
apps/web/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  index.css  templates.ts  theme.ts  vite-env.d.ts
apps/web/src/api/: auth.ts  client.ts  commands.ts  devices.ts  files.ts  models.ts  repos.ts
apps/web/src/components/: FileViewerModal.tsx  MarkdownOutput.tsx  TaskConfigSelector.tsx
apps/web/src/contexts/: AuthContext.tsx
apps/web/src/hooks/: useWebSocket.ts
apps/web/src/pages/: AddDevice.tsx  Chat.tsx  ChatDetail.tsx  ChatDocs.tsx  Login.tsx  Repos.tsx  Setup.tsx
apps/web/src/stores/: auth.ts
apps/web/src/types/: index.ts
apps/web/src/utils/: wordCode.ts
config/: executor.example.toml  relayer.example.toml
crates/executor/: Cargo.toml
crates/executor/src/: cli.rs  lib.rs  main.rs
crates/executor/src/cursor/: mod.rs
crates/executor/src/relay_client/: mod.rs  ws.rs
crates/relayer/: Cargo.toml
crates/relayer/src/: config.rs  lib.rs  main.rs
crates/relayer/src/api/: mod.rs  routes.rs
crates/relayer/src/auth/: mod.rs
crates/relayer/src/db/: migrations.rs  mod.rs
crates/relayer/src/relay/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  models.rs
docs/: MIGRATION_STRATEGY.md  RECOVERY_CLI.md  WEBSOCKET_PROTOCOL.md  WORD_STYLE_CODES.md
migrations/: 001_initial.sql  002_plan_schema.sql  003_bootstrap_devices.sql  004_cursor_chat_id.sql
security_reviews/: SECURITY_REVIEW_2025-02.md
sprints/: SPRINT_001.md  SPRINT_002.md  SPRINT_003.md  SPRINT_004.md
