[package]
name = "executor"
version = "0.1.0"
edition = "2021"
description = "Dev PM Agent executor — desktop daemon, Cursor CLI integration"

[[bin]]
name = "executor"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shellexpand = "2"
futures-util = "0.3"
sha2 = "0.10"
walkdir = "2"
chrono = "0.4"
