[package]
name = "relayer"
version = "0.1.0"
edition = "2021"
description = "Dev PM Agent relayer — auth, device registration, command relay"

[[bin]]
name = "relayer"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.8", features = ["ws", "json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
bcrypt = "0.16"
totp-rs = "4"
jsonwebtoken = "9"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
chrono = "0.4"
shellexpand = "2"
rand = "0.8"
base32 = "0.4"
futures-util = "0.3"
governor = "0.10"
tower_governor = { version = "0.8", features = ["axum"] }

[dev-dependencies]
sha2 = "0.10"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
